# Editor

./: .gitignore  CMakeLists.txt
includes/: mainwindow.h
src/: main.cpp  mainwindow.cpp  test.ui
